--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,5 +1,6 @@
+#mysql file
 FROM mysql/mysql-server:5.7
-ENV MYSQL_ROOT_PASSWORD=root
 ENV MYSQL_USER=root
+ENV MYSQL_ROOT_PASSWORD=root
 EXPOSE 3306
-COPY database.sql /docker-entrypoint-initdb.d/database.sql 
+COPY database.sql /docker-entrypoint-initdb.d/database.sql
