--- a/compose.yml
+++ b/compose.yml
@@ -1,16 +1,16 @@
 ---
 services:
-  dbservice:
-    container_name: db
-    image: dbimage
-    environment:
-      - n=value
+  db:
+    image: sankalp2620/docker:db
     networks:
       - db-network
+    deploy: 
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
-  frontendSerive:
-    container_name: frontendcont
-    image: frontendimage
+  frontend:
+    image: sankalp2620/docker:frontend
     ports:
       - "5000:5000"
     networks:
@@ -22,9 +22,8 @@ services:
         condition: on-failure
 
 
-  authService:
-    container_name: authcont
-    image: authimage
+  auth_service:
+    image: sankalp2620/docker:auth
     networks:
       - app-network
       - db-network
@@ -33,9 +32,8 @@ services:
       restart_policy:
         condition: on-failure
   
-  bookService:
-    container_name: bookcont
-    image: bookimage
+  book_service:
+    image: sankalp2620/docker:book
     networks:
       - app-network
       - db-network
@@ -44,9 +42,8 @@ services:
       restart_policy: 
         condition: on-failure
   
-  borrowService:
-    container_name: borrowcont
-    image: borrowimage
+  borrow_service:
+    image: sankalp2620/docker:borrow
     networks:
       - app-network
       - db-network
