--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,38 @@
+#learning the github actions file structure
+name: CI Pipeline 
+on:
+  push:
+    branches:
+      - main
+      - /*
+  pull_request:
+    branches:
+      - master
+jobs:
+  build:
+  #explain the below code
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+#python application code
+      - name: Set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run tests
+        run: python -m pytest
+
+      - name: Build project
+        run: python setup.py build
+
+     # - name: Deploy to Production
+      #  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+       # run: |
+        #  echo "Deploying to production server..."
+          # Add your deployment commands here
