--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
-      - /*
+      - master
+      - '**'
   pull_request:
     branches:
       - master
