--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build project
-        run: python setup.py build
+        run: python app.py build
 
      # - name: Deploy to Production
       #  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
